fix: improve landing theme contrast

--- a/components/homes/home-5/VideoGalleryFeed.module.css
+++ b/components/homes/home-5/VideoGalleryFeed.module.css
@@ -42,6 +42,7 @@
   padding: 0;
   cursor: pointer;
   background: #000;
+  color: #fff;
 }
 
 .inlinePlayerWrap iframe {
